--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,13 @@
             <version>5.2.1</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.apache.jmeter/ApacheJMeter_functions -->
+        <dependency>
+            <groupId>org.apache.jmeter</groupId>
+            <artifactId>ApacheJMeter_functions</artifactId>
+            <version>5.2.1</version>
+        </dependency>
+
 
     </dependencies>
 
